third_party/move/move-compiler-v2/tests/ability-check/assign.exp

Diagnostics:
warning: Unused value of parameter `f`. Consider removing the parameter, or prefixing with an underscore (e.g., `_f`), or binding to `_`
   ┌─ tests/ability-check/assign.move:20:30
   │
20 │     fun assign_pattern(s: S, f: u64, h: u64): u64 {
   │                              ^

warning: Unused value of parameter `h`. Consider removing the parameter, or prefixing with an underscore (e.g., `_h`), or binding to `_`
   ┌─ tests/ability-check/assign.move:20:38
   │
20 │     fun assign_pattern(s: S, f: u64, h: u64): u64 {
   │                                      ^


Diagnostics:
error: local `s` of type `S` does not have the `drop` ability
   ┌─ tests/ability-check/assign.move:17:9
   │
17 │         *s = S { f: 42, g: T { h: 42 } };
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ reference content dropped here
